--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,9 @@
     <body>
         <div id="react-contianer">
         </div>
+        
+                
+        <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
+        <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
     </body>
 </html>
