--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,8 @@
         <link rel="stylesheet" type="text/css"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
-        <div id="react-contianer">
+        <div id="react-container">
         </div>
-        
-                
         <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
         <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
         <script src="./scripts/app.js"></script>
